--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
 <header>
+    <div class="w-1250">
     <div class="logo">
-    <h2 class="logo-h2">Dasteen<p class="logo">.Blog</p></h2>
+    <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.Blog</p>
     </div>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="18" viewBox="0 0 17 18" fill="none">
+            <li><a class="nav-link" href="#">Home</a></li>
+            <li><a class="nav-link" href="#">Category</a></li>
+            <li><a class="nav-link" href="#">About Me</a></li>
+            <li><a class="nav-link-search" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="18" viewBox="0 0 17 18" fill="none">
                 <path d="M7.08329 13.2501C8.34057 13.2498 9.56161 12.8289 10.552 12.0544L13.6658 15.1682L14.6674 14.1667L11.5536 11.0528C12.3285 10.0623 12.7497 8.84102 12.75 7.58341C12.75 4.45896 10.2077 1.91675 7.08329 1.91675C3.95883 1.91675 1.41663 4.45896 1.41663 7.58341C1.41663 10.7079 3.95883 13.2501 7.08329 13.2501ZM7.08329 3.33341C9.42717 3.33341 11.3333 5.23954 11.3333 7.58341C11.3333 9.92729 9.42717 11.8334 7.08329 11.8334C4.73942 11.8334 2.83329 9.92729 2.83329 7.58341C2.83329 5.23954 4.73942 3.33341 7.08329 3.33341Z" fill="#2B2C34"/>
             </svg>Search</a></li>
             <li><a class="buyME-button" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -27,6 +28,7 @@
             </svg>Buy Me A Coffe </a></li>
         </ul>
     </nav>
+    </div>
 </header>
 <main>
     <section class="top-hi-secsion">
@@ -275,7 +277,7 @@
     <div class="footer-container">
         <div class="footer-left">
         <div class="footer-left-box">
-            <h2 class="logo-h2">Dasteen<p class="logo">.Blog</p></h2>
+            <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.Blog</p>
         </div>
         <p class="footer-left-p"></p>
         <div class="footer-left-links">
