done section bundle full

--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -324,7 +324,7 @@
             </div>
         </div>
         </div>
-        <button class="bundle-button"><a class="bundl-butt-link" href="#">More Article</a>></button>
+        <button class="bundle-button"><a class="bundl-butt-link" href="#">More Article</a></button>
     </section>
     <section class="subscribe-section">
         <div class="subscribe-container">
