--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -17,8 +17,8 @@
     <nav>
         <ul>
             <li><a class="nav-link" href="#">Home</a></li>
-            <li><a class="nav-link" href="#">Category</a></li>
-            <li><a class="nav-link" href="#">About Me</a></li>
+            <li><a class="nav-link" href="#browse-category">Category</a></li>
+            <li><a class="nav-link" href="#footer-link-about-me">About Me</a></li>
             <li><a class="nav-link-search" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="18" viewBox="0 0 17 18" fill="none">
                 <path d="M7.08329 13.2501C8.34057 13.2498 9.56161 12.8289 10.552 12.0544L13.6658 15.1682L14.6674 14.1667L11.5536 11.0528C12.3285 10.0623 12.7497 8.84102 12.75 7.58341C12.75 4.45896 10.2077 1.91675 7.08329 1.91675C3.95883 1.91675 1.41663 4.45896 1.41663 7.58341C1.41663 10.7079 3.95883 13.2501 7.08329 13.2501ZM7.08329 3.33341C9.42717 3.33341 11.3333 5.23954 11.3333 7.58341C11.3333 9.92729 9.42717 11.8334 7.08329 11.8334C4.73942 11.8334 2.83329 9.92729 2.83329 7.58341C2.83329 5.23954 4.73942 3.33341 7.08329 3.33341Z" fill="#2B2C34"/>
             </svg>Search</a></li>
@@ -43,7 +43,7 @@
         </div>
         <img src="IMG/Top-Dasteen.png" alt="boy dasteen">
     </section>
-    <section class="browse-category">
+    <section id="browse-category">
         <div class="section-top-text">
          <h3>Browse The Category</h3>
             <a href="#">See All Category <svg xmlns="http://www.w3.org/2000/svg" width="8" height="16" viewBox="0 0 8 16" fill="none">
@@ -53,11 +53,11 @@
         <div class="browse-category-items">
             <div class="browse-category-item">
                     <img src="IMG/css-icon.png" alt="css icon">
-                    <a class="item-link" href="#">CSS</a>
+                    <a class="item-link" href="#section-bundle-css">CSS</a>
             </div>
             <div class="browse-category-item">
                     <img src="IMG/Javascript-icon.png" alt="javascript icon">
-                    <a class="item-link" href="#">Javascript</a>
+                    <a class="item-link" href="#section-bundle-javascript">Javascript</a>
             </div>
             <div class="browse-category-item">
                     <img src="IMG/logos_tailwindcss-icon.png" alt=" tailwindcss icon">
@@ -69,7 +69,7 @@
             </div>
             <div class="browse-category-item">
                     <img  src="IMG/logos_react.png" alt="react icon">
-                    <a class="item-link" href="#">React JS</a>
+                    <a class="item-link" href="#section-bundle-react-js">React JS</a>
             </div>
         </div>
     </section>
@@ -91,7 +91,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -104,7 +104,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -117,7 +117,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>    3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -130,7 +130,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -143,7 +143,7 @@
                     <path d="M2.12695 0.856445L2.23145 0.875C2.33432 0.900215 2.43306 0.94395 2.52344 1.00391L2.61035 1.06934C2.69275 1.13808 2.76513 1.22049 2.8252 1.31348L6.92969 7.29883L6.98047 7.37793C7.0915 7.56772 7.15037 7.7911 7.15039 8.01855C7.15039 8.27844 7.07341 8.53298 6.92969 8.73828L6.92871 8.73926L2.67969 14.7256C2.60597 14.83 2.51584 14.9188 2.41406 14.9883L2.30859 15.0518C2.16579 15.1244 2.00919 15.1567 1.85156 15.1475V15.1484C1.64088 15.1489 1.43931 15.0728 1.27246 14.9375L1.20312 14.876C1.1278 14.8027 1.06254 14.7178 1.00977 14.624L0.960938 14.5273C0.901575 14.3951 0.866058 14.2508 0.854492 14.1035C0.842971 13.9563 0.856025 13.8077 0.893555 13.666L0.925781 13.5615C0.96268 13.459 1.01249 13.3624 1.07422 13.2754L1.0752 13.2744L4.82129 8.01172L1.20898 2.74023V2.73926C1.12819 2.62208 1.06808 2.48873 1.03223 2.34668C0.996245 2.20408 0.98469 2.05462 0.998047 1.90723L1.0127 1.79785C1.0319 1.68914 1.06544 1.584 1.11133 1.48535C1.17253 1.35384 1.25551 1.23579 1.35742 1.13965C1.45879 1.03625 1.57848 0.956653 1.70996 0.907227L1.81152 0.875977C1.91463 0.850571 2.02118 0.843688 2.12695 0.856445Z" fill="#2B2C34" stroke="#2B2C34" stroke-width="0.3"/>
                 </svg></a>
             </div>
-            <article class="section-bundle-items">
+            <div class="section-bundle-items">
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
                     <img class="bundle-img" src="IMG/flexbox-image.png" alt="flexbox image">
@@ -153,7 +153,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -166,7 +166,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -179,7 +179,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -192,7 +192,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022      <span>∙</span>       3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -215,7 +215,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>  3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -228,7 +228,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -241,7 +241,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -254,7 +254,7 @@
                         <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -278,7 +278,7 @@
                     <div class="bundle-author-text">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
                     <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
-                        <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                        <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
                     </div>
                 </div>
             </article>
@@ -305,7 +305,7 @@
                     <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
-                        <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                        <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
                     </div>
                 </div>
             </article>
@@ -318,7 +318,7 @@
                     <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
-                        <p class="bundle-author-date">Jan 10, 2022     ∙     3 min read</p>
+                        <p class="bundle-author-date">Jan 10, 2022      <span>∙</span>    3 min read</p>
                     </div>
                 </div>
             </article>
@@ -342,9 +342,9 @@
 </main>
 <footer>
     <div class="footer-container">
-        <div class="footer-left">
+        <div class="footer-left-div">
         <div class="logo">
-            <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.Blog</p>
+            <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.blog</p>
         </div>
         <p class="footer-left-p">Digitaldastin by Dastin Darmawan</p>
         <div class="footer-left-links">
@@ -375,42 +375,44 @@
         <div class="footer-box-links">
         <div class="footer-links">
             <ul class="footer-links-list">
-                <li id="footer-link-category"></li>
-                <li><a class="footer-link" href="#section-bundle-css"></a></li>
-                <li><a class="footer-link" href="#section-bundle-css"></a></li>
-                <li><a class="footer-link" href="#section-bundle-css"></a></li>
-                <li><a class="footer-link" href="#section-bundle-css"></a></li>
-                <li><a class="footer-link" href="#section-bundle-css"></a></li>
+                <li id="footer-link-category">Category</li>
+                <li><a class="footer-link" href="#section-bundle-css">CSS</a></li>
+                <li><a class="footer-link" href="#section-bundle-javascript">Javascript</a></li>
+                <li><a class="footer-link" href="#">Tailwind</a></li>
+                <li><a class="footer-link" href="#section-bundle-react-js">React JS</a></li>
+                <li><a class="footer-link" href="#browse-category">More Category</a></li>
             </ul>
         </div>
             <div class="footer-links">
                 <ul class="footer-links-list">
-                    <li id="footer-link-category"></li>
-                    <li><a class="footer-link" href="#"></a></li>
-                    <li><a class="footer-link" href="#"></a></li>
-                    <li><a class="footer-link" href="#"></a></li>
+                    <li id="footer-link-about-me">About Me</li>
+                    <li><a class="footer-link" href="#">About Me</a></li>
+                    <li><a class="footer-link" href="#">Projects</a></li>
+                    <li><a class="footer-link" href="#">Achievement</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <ul class="footer-links-list">
-                    <li id="footer-link-category"></li>
-                    <li><a class="footer-link " href="#"></a></li>
-                    <li><a class="footer-link" href="#"></a></li>
+                    <li id="footer-link-get-in-touch">Get in touch</li>
+                    <li><a class="footer-link " href="#">+62-8XXX-XXX-XX</a></li>
+                    <li><a class="footer-link" href="#">demo@gmail.com</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <ul class="footer-links-list">
-                    <li id="footer-link-category"></li>
-                    <li><a class="footer-link" href="#"></a></li>
-                    <li><a class="footer-link" href="#"></a></li>
-                    <li><a class="footer-link" href="#"></a></li>
-                    <li><a class="footer-link" href="#"></a></li>
+                    <li id="footer-link-follow-us">Follow Us</li>
+                    <li><a class="footer-link" href="#">Medium</a></li>
+                    <li><a class="footer-link" href="#">Instagram</a></li>
+                    <li><a class="footer-link" href="#">Twitter</a></li>
+                    <li><a class="footer-link" href="#">Facebook</a></li>
                 </ul>
             </div>
         </div>
     </div>
+    <div class="footer-copyright">
     <hr class="footer-hr">
-    <p class="foter-bottom-p"></p>
+    <p class="footer-bottom-p">© 2025 Digitaldastin</p>
+    </div>
 </footer>
 </body>
 </html>  
