--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -19,8 +19,6 @@
             <li><a class="nav-link" href="#">Home</a></li>
             <li><a class="nav-link" href="#browse-category">Category</a></li>
             <li><a class="nav-link" href="#footer-link-about-me">About Me</a></li>
-            <li><a class="nav-link" href="#">Category</a></li>
-            <li><a class="nav-link" href="#">About Me</a></li>
             <li><a class="nav-link-search" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="18" viewBox="0 0 17 18" fill="none">
                 <path d="M7.08329 13.2501C8.34057 13.2498 9.56161 12.8289 10.552 12.0544L13.6658 15.1682L14.6674 14.1667L11.5536 11.0528C12.3285 10.0623 12.7497 8.84102 12.75 7.58341C12.75 4.45896 10.2077 1.91675 7.08329 1.91675C3.95883 1.91675 1.41663 4.45896 1.41663 7.58341C1.41663 10.7079 3.95883 13.2501 7.08329 13.2501ZM7.08329 3.33341C9.42717 3.33341 11.3333 5.23954 11.3333 7.58341C11.3333 9.92729 9.42717 11.8334 7.08329 11.8334C4.73942 11.8334 2.83329 9.92729 2.83329 7.58341C2.83329 5.23954 4.73942 3.33341 7.08329 3.33341Z" fill="#2B2C34"/>
             </svg>Search</a></li>
@@ -347,10 +345,8 @@
         <div class="footer-left-div">
         <div class="logo">
             <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.blog</p>
-        <div class="footer-left">
-        <div class="footer-left-box">
-            <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.Blog</p>
         </div>
+        <div class="footer-left">
         <p class="footer-left-p">Digitaldastin by Dastin Darmawan</p>
         <div class="footer-left-links">
             <a class="footer-link-item" href="#"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -375,6 +371,7 @@
                 <path d="M6 9H2V21H6V9Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M4 6C5.10457 6 6 5.10457 6 4C6 2.89543 5.10457 2 4 2C2.89543 2 2 2.89543 2 4C2 5.10457 2.89543 6 4 6Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg></a>
+        </div>
         </div>
         </div>
         <div class="footer-box-links">
@@ -414,10 +411,11 @@
             </div>
         </div>
     </div>
+    </div>
     <div class="footer-copyright">
     <hr class="footer-hr">
     <p class="footer-bottom-p">© 2025 Digitaldastin</p>
     </div>
  </footer>
 </body>
-</html>  
+</html>
