delete 1 class on div in subscribe section

--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -327,7 +327,7 @@
         <button class="bundle-button"><a class="bundl-butt-link" href="#">More Article</a></button>
     </section>
     <section class="subscribe-section">
-        <div class="subscribe-container">
+        <div>
             <img class="subscribe-img" src="IMG/mail.png" alt="mail box">
             <div class="subscribe-title-subtitle">
                 <h3 class="subscribe-h3">Subscribe For the lastest updates</h3>
