delete some  class subscribe section

--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -330,8 +330,8 @@
         <div>
             <img class="subscribe-img" src="IMG/mail.png" alt="mail box">
             <div class="subscribe-title-subtitle">
-                <h3 class="subscribe-h3">Subscribe For the lastest updates</h3>
-                <p class="subscribe-p">Subscribe to newsletter and never miss the new post every week.</p>
+                <h3>Subscribe For the lastest updates</h3>
+                <pk>Subscribe to newsletter and never miss the new post every week.</pk>
             </div>
             <form>
                 <input type="email" placeholder="Enter your email here...">
