delete some  onclass subscribe section

--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -331,7 +331,7 @@
             <img class="subscribe-img" src="IMG/mail.png" alt="mail box">
             <div class="subscribe-title-subtitle">
                 <h3>Subscribe For the lastest updates</h3>
-                <pk>Subscribe to newsletter and never miss the new post every week.</pk>
+                <p>Subscribe to newsletter and never miss the new post every week.</p>
             </div>
             <form>
                 <input type="email" placeholder="Enter your email here...">
@@ -410,7 +410,6 @@
                 </ul>
             </div>
         </div>
-    </div>
     </div>
     <div class="footer-copyright">
     <hr class="footer-hr">
