add new directories on IMG

--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="w-1440">
 <header>
     <div class="w-1250">
     <div class="logo">
@@ -41,7 +42,7 @@
                 <input type="submit" value="Subscribe">
             </form>
         </div>
-        <img src="IMG/Top-Dasteen.png" alt="boy dasteen">
+        <img src="IMG/section-hi/Top-Dasteen.png" alt="boy dasteen">
     </section>
     <section id="browse-category">
         <div class="section-top-text">
@@ -52,23 +53,23 @@
         </div>
         <div class="browse-category-items">
             <div class="browse-category-item">
-                    <img src="IMG/css-icon.png" alt="css icon">
+                    <img src="IMG/section-bc/css-icon.png" alt="css icon">
                     <a class="item-link" href="#section-bundle-css">CSS</a>
             </div>
             <div class="browse-category-item">
-                    <img src="IMG/Javascript-icon.png" alt="javascript icon">
+                    <img src="IMG/section-bc/Javascript-icon.png" alt="javascript icon">
                     <a class="item-link" href="#section-bundle-javascript">Javascript</a>
             </div>
             <div class="browse-category-item">
-                    <img src="IMG/logos_tailwindcss-icon.png" alt=" tailwindcss icon">
+                    <img src="IMG/section-bc/logos_tailwindcss-icon.png" alt=" tailwindcss icon">
                     <a class="item-link" href="#">Tailwind</a>
             </div>
             <div class="browse-category-item">
-                    <img  src="IMG/Vue-Js.png" alt="vue js icon">
+                    <img src="IMG/section-bc/Vue-Js.png" alt="vue js icon">
                     <a class="item-link" href="#">Vue JS</a>
             </div>
             <div class="browse-category-item">
-                    <img  src="IMG/logos_react.png" alt="react icon">
+                    <img src="IMG/section-bc/logos_react.png" alt="react icon">
                     <a class="item-link" href="#section-bundle-react-js">React JS</a>
             </div>
         </div>
@@ -84,11 +85,11 @@
             <div class="section-bundle-items">
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/java-book.png" alt="javascript book image">
+                    <img class="bundle-img" src="IMG/section-bndl/java-book.png" alt="javascript book image">
                     <h4 class="bundle-title">Fundamental of javascript</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
@@ -97,11 +98,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/Grid-image.png" alt="grid image">
+                    <img class="bundle-img" src="IMG/section-bndl/Grid-image.png" alt="grid image">
                     <h4 class="bundle-title">Grid CSS make your life easier</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
@@ -110,11 +111,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/animated-light-img.png" alt="animated light image">
+                    <img class="bundle-img" src="IMG/section-bndl/animated-light-img.png" alt="animated light image">
                     <h4 class="bundle-title">Make animated light mode and dark mode toggle with CSS</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>    3 min read</p>
@@ -123,11 +124,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/tic-tac-toe-image.png" alt="tic tac toe image">
+                    <img class="bundle-img" src="IMG/section-bndl/tic-tac-toe-image.png" alt="tic tac toe image">
                     <h4 class="bundle-title">Make tic tac toe games with react JS</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
@@ -146,11 +147,11 @@
             <div class="section-bundle-items">
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/flexbox-image.png" alt="flexbox image">
+                    <img class="bundle-img" src="IMG/section-bndl/flexbox-image.png" alt="flexbox image">
                     <h4 class="bundle-title">Flexbox cSS : Everything you need to know</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>     3 min read</p>
@@ -159,11 +160,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/Grid-image.png" alt="grid image">
+                    <img class="bundle-img" src="IMG/section-bndl/Grid-image.png" alt="grid image">
                     <h4 class="bundle-title">Grid CSS make your life easier</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
@@ -172,11 +173,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/div-center-img.png" alt="div-center image">
+                    <img class="bundle-img" src="IMG/section-bndl/div-center-img.png" alt="div-center image">
                     <h4 class="bundle-title">3 easy way to make div center</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
@@ -185,11 +186,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/animated-light-img.png" alt="animated-light image">
+                    <img class="bundle-img" src="IMG/section-bndl/animated-light-img.png" alt="animated-light image">
                     <h4 class="bundle-title">Make animated light mode and dark mode toggle with CSS</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022      <span>∙</span>       3 min read</p>
@@ -208,11 +209,11 @@
             <div class="section-bundle-items">
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/array-js-image.png" alt="">
+                    <img class="bundle-img" src="IMG/section-bndl/array-js-image.png" alt="">
                     <h4 class="bundle-title">array in javasript - Learn JS #3</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>  3 min read</p>
@@ -221,11 +222,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                        <img class="bundle-img" src="IMG/java-book.png" alt="javascript book image">
+                        <img class="bundle-img" src="IMG/section-bndl/java-book.png" alt="javascript book image">
                         <h4 class="bundle-title">Fundamental of javascript</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
@@ -234,11 +235,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/7-project-jsImage.png" alt="project on javascript image">
+                    <img class="bundle-img" src="IMG/section-bndl/7-project-jsImage.png" alt="project on javascript image">
                     <h4 class="bundle-title">7 project with javascript you must try for your portfolio</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>     3 min read</p>
@@ -247,11 +248,11 @@
                 </article>
                 <article class="bundle-item">
                     <div class="bundle-item-img-title">
-                    <img class="bundle-img" src="IMG/calculator-Image.png" alt="calculator image">
+                    <img class="bundle-img" src="IMG/section-bndl/calculator-Image.png" alt="calculator image">
                     <h4 class="bundle-title">make simple calculator with javascript</h4>
                     </div>
                     <div class="item-author-reliased">
-                        <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                        <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
                             <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
@@ -270,11 +271,11 @@
         <div class="section-bundle-items">
             <article class="bundle-item">
                 <div class="bundle-item-img-title">
-                <img class="bundle-img" src="IMG/first-mount-react-image.png" alt="learning react image">
+                <img class="bundle-img" src="IMG/section-bndl/first-mount-react-image.png" alt="learning react image">
                 <h4 class="bundle-title">first month of leaning react jS</h4>
                 </div>
                 <div class="item-author-reliased">
-                    <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                    <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
@@ -285,11 +286,11 @@
             </article>
             <article class="bundle-item">
                 <div class="bundle-item-img-title">
-                <img class="bundle-img" src="IMG/biuld-makdown-react-image.png" alt="biuld makdown react image">
+                <img class="bundle-img" src="IMG/section-bndl/biuld-makdown-react-image.png" alt="biuld makdown react image">
                 <h4 class="bundle-title">build markdown editor with react JS</h4>
                 </div>
                 <div class="item-author-reliased">
-                    <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                    <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
                         <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
@@ -298,11 +299,11 @@
             </article>
             <article class="bundle-item">
                 <div class="bundle-item-img-title">
-                <img class="bundle-img" src="IMG/getting-starting-react-image.png" alt="getting starting react image">
+                <img class="bundle-img" src="IMG/section-bndl/getting-starting-react-image.png" alt="getting starting react image">
                 <h4 class="bundle-title">getting started with react JS</h4>
                 </div>
                 <div class="item-author-reliased">
-                    <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                    <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
                         <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
@@ -311,11 +312,11 @@
             </article>
             <article class="bundle-item">
                 <div class="bundle-item-img-title">
-                <img class="bundle-img" src="IMG/tic-tac-toe-image.png" alt="tic-tac-toe image">
+                <img class="bundle-img" src="IMG/section-bndl/tic-tac-toe-image.png" alt="tic-tac-toe image">
                 <h4 class="bundle-title">Make tic tac toe games with react JS</h4>
                 </div>
                 <div class="item-author-reliased">
-                    <img class="bundle-author-img" src="IMG/Dasteen-portrait.png" alt="Dasteen's Photo">
+                    <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
                         <p class="bundle-author-date">Jan 10, 2022      <span>∙</span>    3 min read</p>
@@ -328,7 +329,7 @@
     </section>
     <section class="subscribe-section">
         <div>
-            <img class="subscribe-img" src="IMG/mail.png" alt="mail box">
+            <img class="subscribe-img" src="IMG/section-subs/mail.png" alt="mail box">
             <div class="subscribe-title-subtitle">
                 <h3>Subscribe For the lastest updates</h3>
                 <p>Subscribe to newsletter and never miss the new post every week.</p>
@@ -416,5 +417,6 @@
     <p class="footer-bottom-p">© 2025 Digitaldastin</p>
     </div>
  </footer>
+</div>
 </body>
 </html>
