--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -18,7 +18,7 @@
     <nav>
         <ul>
             <li><a class="nav-link" href="#">Home</a></li>
-            <li><a class="nav-link" href="#browse-category">Category</a></li>
+            <li><a class="nav-link" href="#browse-category-div">Category</a></li>
             <li><a class="nav-link" href="#footer-link-about-me">About Me</a></li>
             <li><a class="nav-link-search" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="18" viewBox="0 0 17 18" fill="none">
                 <path d="M7.08329 13.2501C8.34057 13.2498 9.56161 12.8289 10.552 12.0544L13.6658 15.1682L14.6674 14.1667L11.5536 11.0528C12.3285 10.0623 12.7497 8.84102 12.75 7.58341C12.75 4.45896 10.2077 1.91675 7.08329 1.91675C3.95883 1.91675 1.41663 4.45896 1.41663 7.58341C1.41663 10.7079 3.95883 13.2501 7.08329 13.2501ZM7.08329 3.33341C9.42717 3.33341 11.3333 5.23954 11.3333 7.58341C11.3333 9.92729 9.42717 11.8334 7.08329 11.8334C4.73942 11.8334 2.83329 9.92729 2.83329 7.58341C2.83329 5.23954 4.73942 3.33341 7.08329 3.33341Z" fill="#2B2C34"/>
@@ -44,7 +44,8 @@
         </div>
         <img src="IMG/section-hi/Top-Dasteen.png" alt="boy dasteen">
     </section>
-    <section id="browse-category">
+    <section class="section-browse-category">
+        <div id="browse-category-div">
         <div class="section-top-text">
          <h3>Browse The Category</h3>
             <a href="#">See All Category <svg xmlns="http://www.w3.org/2000/svg" width="8" height="16" viewBox="0 0 8 16" fill="none">
@@ -73,9 +74,10 @@
                     <a class="item-link" href="#section-bundle-react-js">React JS</a>
             </div>
         </div>
+        </div>
     </section>
     <section class="section-bundle">
-        <div id="section-bundle-feutured-articles">
+        <div id="section-bundle-featured-articles">
             <div class="section-top-text">
                 <h3>Featured Article</h3>
                 <a href="#">See All Article <svg xmlns="http://www.w3.org/2000/svg" width="8" height="16" viewBox="0 0 8 16" fill="none">
