change style for span

--- a/Dasteen-site/index.html
+++ b/Dasteen-site/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="w-1440">
+<div class="page-w-1440">
 <header>
-    <div class="w-1250">
+    <div class="header-container">
     <div class="logo">
     <h2 class="logo-h2">Dasteen</h2><p class="logo-p">.Blog</p>
     </div>
@@ -35,10 +35,10 @@
     <section class="top-hi-section">
         <div class="top-hi-div">
             <h1 class="top-hi-h1">Hi, i’m Dasteen Front end dev</h1>
-            <p class="top-hi-p">On this blog I share tips and tricks, frameworks, projects, tutorials, etc
-                Make sure you subscribe to get the latest updates</p>
+            <label for="top-email">On this blog I share tips and tricks, frameworks, projects, tutorials, etc
+                Make sure you subscribe to get the latest updates</label>
             <form>
-                <input type="email" placeholder="Enter your email here...">
+                <input id="top-email" type="email" placeholder="Enter your email here...">
                 <input type="submit" value="Subscribe">
             </form>
         </div>
@@ -53,26 +53,26 @@
             </svg></a>
         </div>
         <div class="browse-category-items">
-            <div class="browse-category-item">
+            <article class="browse-category-item">
                     <img src="IMG/section-bc/css-icon.png" alt="css icon">
                     <a class="item-link" href="#section-bundle-css">CSS</a>
-            </div>
-            <div class="browse-category-item">
+            </article>
+            <article class="browse-category-item">
                     <img src="IMG/section-bc/Javascript-icon.png" alt="javascript icon">
                     <a class="item-link" href="#section-bundle-javascript">Javascript</a>
-            </div>
-            <div class="browse-category-item">
+            </article>
+            <article class="browse-category-item">
                     <img src="IMG/section-bc/logos_tailwindcss-icon.png" alt=" tailwindcss icon">
                     <a class="item-link" href="#">Tailwind</a>
-            </div>
-            <div class="browse-category-item">
+            </article>
+            <article class="browse-category-item">
                     <img src="IMG/section-bc/Vue-Js.png" alt="vue js icon">
                     <a class="item-link" href="#">Vue JS</a>
-            </div>
-            <div class="browse-category-item">
+            </article>
+            <article class="browse-category-item">
                     <img src="IMG/section-bc/logos_react.png" alt="react icon">
                     <a class="item-link" href="#section-bundle-react-js">React JS</a>
-            </div>
+            </article>
         </div>
         </div>
     </section>
@@ -94,7 +94,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span></span>    3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -107,7 +107,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span></span>    3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -120,7 +120,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>    3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span></span>    3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -133,7 +133,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022   <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -156,7 +156,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -169,7 +169,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022   <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -182,7 +182,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -195,7 +195,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022      <span>∙</span>       3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022      <span></span>       3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -218,7 +218,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>  3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span></span>  3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -231,7 +231,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022   <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022   <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -244,7 +244,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022    <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022    <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -257,7 +257,7 @@
                         <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span></span>     3 min read</p>
                         </div>
                     </div>
                 </article>
@@ -281,7 +281,7 @@
                     <div class="bundle-author-text">
                         <div class="bundle-author-text">
                             <h5 class="bundle-author">Dasteen</h5>
-                            <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
+                            <p class="bundle-author-date">Jan 10, 2022     <span></span>    3 min read</p>
                         </div>
                     </div>
                 </div>
@@ -295,7 +295,7 @@
                     <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
-                        <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>    3 min read</p>
+                        <p class="bundle-author-date">Jan 10, 2022     <span></span>    3 min read</p>
                     </div>
                 </div>
             </article>
@@ -308,7 +308,7 @@
                     <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
-                        <p class="bundle-author-date">Jan 10, 2022     <span>∙</span>     3 min read</p>
+                        <p class="bundle-author-date">Jan 10, 2022     <span></span>     3 min read</p>
                     </div>
                 </div>
             </article>
@@ -321,7 +321,7 @@
                     <img class="bundle-author-img" src="IMG/section-bndl/Dasteen-portrait.png" alt="Dasteen's Photo">
                     <div class="bundle-author-text">
                         <h5 class="bundle-author">Dasteen</h5>
-                        <p class="bundle-author-date">Jan 10, 2022      <span>∙</span>    3 min read</p>
+                        <p class="bundle-author-date">Jan 10, 2022      <span></span>    3 min read</p>
                     </div>
                 </div>
             </article>
@@ -334,10 +334,10 @@
             <img class="subscribe-img" src="IMG/section-subs/mail.png" alt="mail box">
             <div class="subscribe-title-subtitle">
                 <h3>Subscribe For the lastest updates</h3>
-                <p>Subscribe to newsletter and never miss the new post every week.</p>
+                <label for="email">Subscribe to newsletter and never miss the new post every week.</label>
             </div>
             <form>
-                <input type="email" placeholder="Enter your email here...">
+                <input id="email" type="email" placeholder="Enter your email here...">
                 <input type="submit" value="Subscribe">
             </form>
         </div>
@@ -385,7 +385,7 @@
                 <li><a class="footer-link" href="#section-bundle-javascript">Javascript</a></li>
                 <li><a class="footer-link" href="#">Tailwind</a></li>
                 <li><a class="footer-link" href="#section-bundle-react-js">React JS</a></li>
-                <li><a class="footer-link" href="#browse-category">More Category</a></li>
+                <li><a class="footer-link" href="#browse-category-div">More Category</a></li>
             </ul>
         </div>
             <div class="footer-links">
@@ -396,13 +396,11 @@
                     <li><a class="footer-link" href="#">Achievement</a></li>
                 </ul>
             </div>
-            <div class="footer-links">
-                <ul class="footer-links-list">
-                    <li id="footer-link-get-in-touch">Get in touch</li>
-                    <li><a class="footer-link " href="#">+62-8XXX-XXX-XX</a></li>
-                    <li><a class="footer-link" href="#">demo@gmail.com</a></li>
-                </ul>
-            </div>
+            <address>
+                        <p id="footer-link-get-in-touch">Get in touch</p>
+                        <a class="footer-link " href="tel:+62-8XXX-XXX-XX">+62-8XXX-XXX-XX</a>
+                        <a class="footer-link" href="mailto:demo@gmail.com">demo@gmail.com</a>
+            </address>
             <div class="footer-links">
                 <ul class="footer-links-list">
                     <li id="footer-link-follow-us">Follow Us</li>
